--- a/less/common.less
+++ b/less/common.less
@@ -1,5 +1,5 @@
-/* HubUi-X Theme */
-@border-radius: 12px;
+/* GreenUi-X Theme */
+@border-radius: 10px;
 .Dropdown-menu {
     border-radius: @border-radius;
     padding: 1px;
