--- a/less/forum.less
+++ b/less/forum.less
@@ -76,7 +76,7 @@ body,
     box-shadow: var(--green-shadow-box);
 }
 
-.LinksButton--label,
+.Button-label,
 .Afrux-NewsWidget,
 .AfruxWidgets-Widget-title {
     color: var(--text-color) !important;
