--- a/less/forum.less
+++ b/less/forum.less
@@ -76,9 +76,15 @@ body,
     box-shadow: var(--green-shadow-box);
 }
 
+.Button--link.LinksButton--label,
 .Afrux-NewsWidget,
 .AfruxWidgets-Widget-title {
     color: var(--text-color) !important;
+}
+
+.Button--icon.Button--link:hover,
+.Button--link.LinksButton--label:hover{
+    color: var(--link-color) !important;
 }
 
 .item-like .Button--link .Button-label,
