--- a/less/forum.less
+++ b/less/forum.less
@@ -1,5 +1,6 @@
 /* GreenUi-X Theme */
 @import "common.less";
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Play:wght@400;700&family=Scada:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
     & when (@config-dark-mode =false) {
@@ -61,6 +62,7 @@ li {
 body,
 #app .App-content {
     background-color: var(--control-bg-light);
+    font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, Cantarell, Oxygen, Roboto, Helvetica, Arial, sans-serif;
 }
 
 #drawer,
@@ -83,7 +85,7 @@ body,
 }
 
 .Button--icon.Button--link:hover,
-.Button--link.LinksButton--label:hover{
+.Button--link.LinksButton--label:hover {
     color: var(--link-color) !important;
 }
 
@@ -287,5 +289,13 @@ ul.NotificationGroup-content {
     .TagTiles>li {
         border-radius: @border-radius !important;
         margin: 15px;
+    }
+
+    .DiscussionListItem-title {
+        font-size: 14px;
+    }
+
+    .DiscussionListItem-title {
+        font-size: 14px;
     }
 }
