add fill Reactions

--- a/less/forum.less
+++ b/less/forum.less
@@ -202,6 +202,11 @@ aside.DiscussionPage-list {
     color: #fff;
 }
 
+#Combined-Shape,
+#Group-15 {
+    fill: var(--button-color) !important;
+}
+
 header.Hero.DiscussionHero,
 header.Hero.WelcomeHero {
     border-radius: @border-radius;
