--- a/less/forum.less
+++ b/less/forum.less
@@ -95,6 +95,10 @@ body,
     display: none;
 }
 
+.item-discussion-views {
+    cursor: default;
+}
+
 .item-like .Button:before {
     font-family: 'Font Awesome 5 Free', 'Font Awesome 6 Free', 'Font Awesome 6 Pro';
     font-weight: 600;
@@ -255,7 +259,6 @@ ul.NotificationGroup-content {
 
 .DiscussionListItem-title {
     font-size: 18px;
-    font-weight: 600;
 }
 
 .DiscussionListItem-info .item-excerpt {
