add color checkbox

--- a/less/forum.less
+++ b/less/forum.less
@@ -206,6 +206,14 @@ aside.DiscussionPage-list {
     color: #fff;
 }
 
+.on.Checkbox--switch .Checkbox-display {
+    background: var(--button-primary-bg);
+}
+
+.on .Checkbox-display {
+    color: var(--button-primary-bg);
+}
+
 #Combined-Shape,
 #Group-15 {
     fill: var(--button-color) !important;
@@ -298,6 +306,7 @@ ul.NotificationGroup-content {
         border-radius: @border-radius !important;
         margin: 15px;
     }
+
     .DiscussionListItem-title {
         font-size: 14px;
     }
