--- a/less/forum.less
+++ b/less/forum.less
@@ -214,6 +214,18 @@ aside.DiscussionPage-list {
     color: var(--button-primary-bg);
 }
 
+.Post-footer .item-bestAnswerPost {
+    background-color: rgba(0, 161, 133, 0.23) !important;
+}
+
+.Post--BestAnswer {
+    background: var(--button-primary-bg) !important;
+}
+
+.Badge--bestAnswer {
+    background-color: var(--button-primary-bg) !important;
+}
+
 #Combined-Shape,
 #Group-15 {
     fill: var(--button-color) !important;
