--- a/less/forum.less
+++ b/less/forum.less
@@ -226,6 +226,20 @@ aside.DiscussionPage-list {
     background-color: var(--button-primary-bg) !important;
 }
 
+.UserCard.Hero.UserHero {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.FormControl[type=text]{
+    font-size: 14px !important;
+}
+
+.fa-circle {
+    color: var(--button-primary-bg) !important;
+}
 #Combined-Shape,
 #Group-15 {
     fill: var(--button-color) !important;
