emoji and fancybox

--- a/less/forum.less
+++ b/less/forum.less
@@ -240,6 +240,23 @@ aside.DiscussionPage-list {
 .fa-circle {
     color: var(--button-primary-bg) !important;
 }
+
+.emojionearea-category-title {
+    color: var(--text-color) !important;
+}
+
+.emojionearea-category-title, .emojionearea-picker, .emojionearea-filters {
+    background: var(--control-bg-light) !important;
+}
+
+.emojionearea-filter.active {
+    background: var(--button-primary-bg) !important;
+}
+
+.emojibtn:hover {
+    background-color: var(--button-primary-bg) !important;
+}
+
 #Combined-Shape,
 #Group-15 {
     fill: var(--button-color) !important;
@@ -258,6 +275,18 @@ header.Hero.WelcomeHero {
 
 .Hero {
     margin: 12px;
+}
+
+.fancybox-gallery, a[data-fancybox="single"]>img {
+    border: 1px solid var(--control-bg-light) !important;
+}
+
+.fancybox__toolbar {
+    color: var(--button-primary-bg) !important;
+}
+
+.f-button svg {
+    stroke: var(--button-primary-bg) !important;
 }
 
 ul.NotificationGroup-content {
