--- a/less/forum.less
+++ b/less/forum.less
@@ -333,6 +333,11 @@ ul.NotificationGroup-content {
     color: var(--muted-color) !important;
 }
 
+.social-settings>.fa-cog {
+    border-left: none !important;
+    width: 50% !important;
+}
+
 .Post-body blockquote,
 .Post-body code,
 .Post-body pre {
